# nilm_metadata

./: pyproject.toml
nilm_metadata/central_metadata/appliance_types/: misc.yaml
