[project]
name = "nilm_metadata"
dynamic = ["version"]
description = "Concatenate NILM metadata"
authors = [{ name = "Jack Kelly", email = "jack.kelly@imperial.ac.uk" }]
license = { file = "LICENSE" }
readme = "README.md"
keywords = [
    "smartmeters",
    "power",
    "electricity",
    "energy",
    "analytics",
    "redd",
    "disaggregation",
    "nilm",
    "nialm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache 2.0",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry]
version = "0.0.0"
[tool.poetry.dependencies]
python = ">=3.13"
pandas = "^2.0.3"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
isort = "^5.12.0"
mypy = "^1.4.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"


[tool.poetry.group.opt.dependencies]
sphinx = "^8.2.3"

[tool.isort]
profile = "black"
skip = ["__init__.py"]

# Fix warnings for libraries without stubs
[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "pandas.*",

]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["nilm_metadata/tests"]

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


